--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,17 @@
   "paths": {
     "*": ["src/*"],
     "tests": ["tests/*"],
-    "@components/*": ["src/components/*"],
+    "@assets/*": [
+      "./src/assets/*"
+    ],
+    "@components/*": [
+      "./src/components/*"
+    ],
+    "@screens/*": [
+      "./src/screens/*"
+    ],
+    "@routes/*": [
+      "./src/routes/*"
+    ]
   },
 }
