--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "expo start --dev-client",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web"
+    "ios": "npx react-native run-ios",
+    "android": "npx react-native run-android",
+    "expo": "expo start --dev-client",
+    "start": "npx react-native start"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.0",
